fixed spacing

--- a/motivation.css
+++ b/motivation.css
@@ -24,7 +24,7 @@ body {
 .calendar-header {
   text-align: center;
   padding-top: 18px;
-  font-size: 12vw;
+  font-size: 10.5vw;
   color: white;
 }
 
@@ -58,7 +58,7 @@ body {
 }
 
 /* shop icon */
-.shop-image-wrapper { 
+.shop-image-wrapper {
   float: right;
   width: 15vw;
   padding-top: 40px;
@@ -66,7 +66,7 @@ body {
 }
 
 /* shop icon in weekly calendar view */
-.shop-icon { 
+.shop-icon {
   float: right;
   width: 15vw;
   padding-top: 14px;
@@ -416,14 +416,14 @@ table thead tr th .short {
     font-size: 16px;
     border: none;
     cursor: pointer;
-	
+
 }
 
 .dropdown {
     float: right;
     position: relative;
     display: inline-block;
-    
+
 }
 
 .dropdown-content {
